# applied_scientific_python

./: LICENSE  README.md  requirements.txt  setup.py
.github/: workflows
.github/workflows/: main.yml
day_1/am/: 01_recap.py  02_intro_to_functools.py  03_intro_to_itertools.py
day_1/am/tasks/: 01_recap_task.py  02_functools_task.py  03_itertools_task.py  data.txt
day_1/pm/: 01_intro_to_pytest.py  02_intro_to_unittest.py  03_debugging.py
day_1/pm/tasks/: 01_pytest_task.py  02_unittest_task.py  03_debugging_tasks.py
day_2/am/: 01_intro_to_oop.py  02_intro_to_abstraction.py  02_intro_to_inheritance.py  03_intro_to_abstraction.py  03_real_world_example_abstraction.py  04_real_world_example_abstraction.py
day_2/am/tasks/: 01_oop_task.py  02_abstraction_task.py  02_inheritance_task.py  03_abstraction_task.py  03_inheritance_task.py
day_2/pm/: 01_python_and_cli.py  02_using_cli_tools.py
day_2/pm/cli_utility/: cli_script.py  setup.py
day_2/pm/tasks/: 01_cli_tools_task.py  02_create_your_own.py  03_Extra_Task.py  material.csv
day_3/am/: 01_intro_to_data_models.py  02_intro_to_sqlalchemy.py  03_intro_to_sqlalchemy_modelling.py  example.db
day_3/pm/: 01_query_optermisation.py  02_intro_to_pandas.py  02_intro_to_pandas_cleaning.py  03_compare_perf_numpy_vs_loop.py
day_4/am/01_setup_recap/: pyproject.toml  requirements.txt  setup.py
day_4/pm/: 01_automate_testing_and_deployment.md  02.5_GitHub_Actions_CI_CD_Example.md  02_writing_effective_gitlab_ci.md  03_twine_and_pypi_deployment.md  04_automated_cli_jobs.md
material/: further_functools.py
(+24 files in other folders)
