[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_science_tool"
version = "1.0.0"
description = "A tool for analyzing experiment data"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.25",
    "pandas>=2.0"
]
